--- a/ats-checker.html
+++ b/ats-checker.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -50,73 +11,84 @@
         body { font-family: 'Poppins', sans-serif; }
         .progress-bar { transition: width 0.5s ease-in-out; }
         .score-circle { transition: all 1s ease-in-out; }
-        .payment-banner { background: linear-gradient(135deg, #00A651 0%, #1e40af 100%); }
+        .input-field { transition: border-color 0.3s ease, box-shadow 0.3s ease; }
+        .input-field:focus { border-color: #00A651; box-shadow: 0 0 0 3px rgba(0, 166, 81, 0.1); }
+        .menu-hover:hover { background-color: #f3f4f6; border-radius: 4px; }
     </style>
 </head>
-<body class="bg-gray-50">
-    <!-- Navigation -->
+<body class="bg-gray-100">
     <nav class="bg-white shadow-lg sticky top-0 z-50">
-        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-gray-800">Daily Jobs</a>
-            <div class="space-x-6">
-                <a href="cover-letter-generator.html" class="text-gray-600 font-semibold hover:text-green-600">Application Letter</a>
-                <a href="ats-checker.html" class="text-gray-600 font-semibold hover:text-green-600">ATS Checker</a>
-                <a href="https://dailyjobs.co.ke/" class="text-gray-600 font-semibold hover:text-green-600">Explore Jobs</a>
+        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+            <a href="index.html" class="text-2xl font-bold text-gray-800 flex items-center">
+                <span class="text-green-600">Daily</span><span class="text-blue-600">Jobs</span>
+            </a>
+            <div class="space-x-6 flex items-center">
+                <a href="cover-letter-generator.html" class="menu-hover text-gray-700 font-semibold px-3 py-2 hover:text-green-600 transition duration-200">Application Letter</a>
+                <a href="ats-checker.html" class="menu-hover text-gray-700 font-semibold px-3 py-2 hover:text-green-600 transition duration-200">ATS Checker</a>
+                <a href="https://dailyjobs.co.ke/" class="menu-hover text-gray-700 font-semibold px-3 py-2 hover:text-green-600 transition duration-200">Explore Jobs</a>
+                <button id="mobileMenuBtn" class="lg:hidden text-gray-700 focus:outline-none">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"/>
+                    </svg>
+                </button>
             </div>
+        </div>
+        <div id="mobileMenu" class="lg:hidden bg-white shadow-md px-4 py-2 space-y-2 hidden">
+            <a href="cover-letter-generator.html" class="block text-gray-700 font-semibold hover:text-green-600">Application Letter</a>
+            <a href="ats-checker.html" class="block text-gray-700 font-semibold hover:text-green-600">ATS Checker</a>
+            <a href="https://dailyjobs.co.ke/" class="block text-gray-700 font-semibold hover:text-green-600">Explore Jobs</a>
         </div>
     </nav>
 
-    <!-- Main Section -->
-    <section class="py-16">
+    <section class="py-12">
         <div class="container mx-auto px-4 max-w-3xl">
-            <h2 class="text-xl sm:text-3xl font-semibold text-center mb-6 text-gray-800" data-aos="fade-up">ATS Checker</h2>
+            <h2 class="text-4xl font-bold text-center text-gray-800 mb-8" data-aos="fade-up">Optimize Your Resume with ATS Checker</h2>
 
-            <!-- Progress Bar -->
-            <div class="w-full bg-gray-200 rounded-full h-4 mb-8" data-aos="fade-up">
-                <div id="progressBar" class="progress-bar bg-green-600 h-4 rounded-full" style="width: 0%"></div>
+            <div class="w-full bg-gray-200 rounded-full h-2.5 mb-8" data-aos="fade-up">
+                <div id="progressBar" class="progress-bar bg-green-600 h-2.5 rounded-full" style="width: 0%"></div>
             </div>
 
-            <div class="bg-white p-4 sm:p-8 rounded-lg shadow-lg">
-                <p class="text-center text-gray-600 mb-4" data-aos="fade-up">Upload your resume or paste your content to check ATS compatibility.</p>
-                <form id="atsForm" class="space-y-4">
+            <div class="bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up">
+                <p class="text-center text-gray-600 mb-6">Upload your resume or paste content to get an ATS compatibility score.</p>
+                <form id="atsForm" class="space-y-6">
                     <div>
-                        <label for="jobTitle" class="block text-sm font-medium text-gray-700">Job Title</label>
-                        <input type="text" id="jobTitle" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500 sm:text-sm" placeholder="e.g., Software Engineer" required>
+                        <label for="jobTitle" class="block text-sm font-medium text-gray-700 mb-2">Job Title</label>
+                        <input type="text" id="jobTitle" class="input-field block w-full p-3 border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-green-500 sm:text-sm" placeholder="e.g., Software Engineer" required>
                     </div>
                     <div>
-                        <label for="cvUpload" class="block text-sm font-medium text-gray-700">Upload Your CV (PDF/TXT)</label>
-                        <input type="file" id="cvUpload" accept=".pdf,.txt" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500 sm:text-sm">
+                        <label for="cvUpload" class="block text-sm font-medium text-gray-700 mb-2">Upload Your CV (PDF/TXT)</label>
+                        <input type="file" id="cvUpload" accept=".pdf,.txt" class="input-field block w-full p-3 border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-green-500 sm:text-sm">
                     </div>
                     <div>
-                        <label for="content" class="block text-sm font-medium text-gray-700">Or Paste Your Resume/Cover Letter</label>
-                        <textarea id="content" rows="10" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-green-500 focus:border-green-500 sm:text-sm"></textarea>
+                        <label for="content" class="block text-sm font-medium text-gray-700 mb-2">Or Paste Your Resume/Cover Letter</label>
+                        <textarea id="content" rows="8" class="input-field block w-full p-3 border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-green-500 sm:text-sm"></textarea>
                     </div>
-                    <button type="submit" class="w-full bg-green-600 text-white p-3 rounded hover:bg-green-700">Check ATS Compatibility</button>
+                    <button type="submit" class="w-full bg-green-600 text-white p-3 rounded-lg shadow-md hover:bg-green-700 text-sm sm:text-base transition duration-200">Check ATS Compatibility</button>
                 </form>
                 <div id="results" class="mt-6 hidden" data-aos="fade-up">
-                    <h3 class="text-lg font-semibold text-gray-800 text-center">Your ATS Score</h3>
-                    <div class="flex justify-center my-6">
+                    <h3 class="text-xl font-semibold text-gray-800 text-center mb-4">Your ATS Score</h3>
+                    <div class="flex justify-center mb-6">
                         <div class="relative">
-                            <svg class="score-circle w-40 h-40">
-                                <circle cx="80" cy="80" r="70" stroke="#e5e7eb" stroke-width="10" fill="none"/>
-                                <circle id="scoreCircle" cx="80" cy="80" r="70" stroke="#00A651" stroke-width="10" fill="none" stroke-dasharray="439.8" stroke-dashoffset="439.8"/>
+                            <svg class="score-circle w-48 h-48">
+                                <circle cx="96" cy="96" r="84" stroke="#e5e7eb" stroke-width="12" fill="none"/>
+                                <circle id="scoreCircle" cx="96" cy="96" r="84" stroke="#00A651" stroke-width="12" fill="none" stroke-dasharray="527.8" stroke-dashoffset="527.8"/>
                             </svg>
                             <div class="absolute inset-0 flex items-center justify-center">
-                                <span id="atsScore" class="text-3xl font-bold text-green-600">0</span>
+                                <span id="atsScore" class="text-4xl font-bold text-green-600">0</span>
                             </div>
                         </div>
                     </div>
-                    <div id="feedback" class="mt-4 space-y-2"></div>
-                    <div id="paymentSection" class="payment-banner text-white p-6 rounded-lg mt-4 text-center">
-                        <p class="mb-4">Pay Ksh 17 via M-PESA to unlock your detailed ATS report.</p>
-                        <button id="payNowBtn" class="bg-white text-green-600 font-semibold py-2 px-4 rounded hover:bg-gray-100">Pay Now</button>
+                    <div id="feedback" class="mt-4 space-y-3 text-gray-700"></div>
+                    <div id="paymentSection" class="payment-banner text-white p-6 rounded-lg mt-6 text-center">
+                        <p class="mb-4 text-lg">Pay Ksh 17 via M-PESA to unlock your detailed ATS report.</p>
+                        <button id="payNowBtn" class="bg-white text-green-600 font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-gray-100 transition duration-200">Pay Now</button>
                         <p id="paymentError" class="text-red-300 mt-2 hidden">Payment failed. Please try again.</p>
                     </div>
                 </div>
             </div>
             <div class="mt-6 flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
-                <a href="https://dailyjobs.co.ke/" class="bg-gray-600 text-white p-3 rounded hover:bg-gray-700 text-sm sm:text-base">Return to Daily Jobs</a>
-                <a href="cover-letter-generator.html" class="bg-gray-600 text-white p-3 rounded hover:bg-green-700 text-sm sm:text-base">Generate Cover Letter</a>
+                <a href="https://dailyjobs.co.ke/" class="bg-gray-600 text-white p-3 rounded-lg shadow-md hover:bg-gray-700 text-sm sm:text-base transition duration-200">Return to Daily Jobs</a>
+                <a href="cover-letter-generator.html" class="bg-green-600 text-white p-3 rounded-lg shadow-md hover:bg-green-700 text-sm sm:text-base transition duration-200">Generate Cover Letter</a>
             </div>
         </div>
     </section>
@@ -135,12 +107,8 @@
         const progressBar = document.getElementById('progressBar');
         const payNowBtn = document.getElementById('payNowBtn');
         const paymentError = document.getElementById('paymentError');
-
-        const keywordLists = {
-            'software engineer': ['javascript', 'python', 'java', 'sql', 'agile', 'git', 'aws', 'docker', 'react', 'node.js'],
-            'accountant': ['excel', 'quickbooks', 'financial reporting', 'tax', 'auditing', 'budgeting', 'sap', 'ifrs', 'payroll', 'reconciliation'],
-            'marketing manager': ['seo', 'sem', 'google analytics', 'content marketing', 'social media', 'branding', 'campaign management', 'email marketing', 'market research', 'crm']
-        };
+        const mobileMenuBtn = document.getElementById('mobileMenuBtn');
+        const mobileMenu = document.getElementById('mobileMenu');
 
         let progress = 0;
         const updateProgress = () => {
@@ -166,6 +134,36 @@
             return text;
         }
 
+        async function analyzeATSCompatibility(content, jobTitle) {
+            const apiKey = 'AIzaSyAkbXb2zXj5MY298yf2yMnV8kD3p-uTufA'; // Your API key (remove for production)
+            const prompt = `Analyze the following resume content for ATS compatibility with a ${jobTitle} role. Provide a score out of 100 and detailed feedback on keyword usage, structure, and potential improvements: ${content}`;
+            try {
+                const response = await fetch('https://api.google.com/genai/v1/models/gemini-1.5-flash:generateContent', {
+                    method: 'POST',
+                    headers: {
+                        'Authorization': `Bearer ${apiKey}`,
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        prompt: prompt,
+                        temperature: 0.7,
+                        max_tokens: 500
+                    })
+                });
+                const data = await response.json();
+                const result = data.candidates[0].content.parts[0].text;
+                const scoreMatch = result.match(/Score: (\d+)/i);
+                const feedbackMatch = result.match(/Feedback:([\s\S]*)/i);
+                return {
+                    score: scoreMatch ? parseInt(scoreMatch[1]) : 0,
+                    feedback: feedbackMatch ? feedbackMatch[1].trim() : 'No feedback available.'
+                };
+            } catch (error) {
+                console.error('Error analyzing ATS compatibility:', error);
+                return { score: 0, feedback: 'Error analyzing content. Please try again.' };
+            }
+        }
+
         atsForm.addEventListener('submit', async (e) => {
             e.preventDefault();
 
@@ -182,50 +180,24 @@
             }
 
             const jobTitle = document.getElementById('jobTitle').value.toLowerCase();
-            let score = 0;
-            const feedback = [];
+            const { score, feedback } = await analyzeATSCompatibility(content, jobTitle);
 
-            let keywords = keywordLists[jobTitle] || [];
-            if (!keywords.length) {
-                keywords = keywordLists['software engineer'];
-                feedback.push('Job title not recognized. Using default keywords for Software Engineer.');
-            }
-            const keywordMatches = keywords.filter(keyword => content.includes(keyword));
-            const keywordScore = (keywordMatches.length / keywords.length) * 50;
-            score += keywordScore;
-            feedback.push(`Found ${keywordMatches.length}/${keywords.length} relevant keywords: ${keywordMatches.join(', ') || 'None'}.`);
-
-            if (content.includes('•') || content.includes('★') || content.includes('♦')) {
-                feedback.push('Avoid using special characters (e.g., bullets like •, ★) as they may confuse ATS systems.');
-            } else {
-                score += 20;
-            }
-
-            if (content.includes('header') || content.includes('footer')) {
-                feedback.push('Avoid using headers or footers, as ATS may not parse them correctly.');
-            } else {
-                score += 15;
-            }
-
-            if (content.length < 200) {
-                feedback.push('Content is too short. Aim for at least 200 characters to provide enough detail.');
-            } else {
-                score += 15;
-            }
-
-            const finalScore = Math.round(score);
-            atsScoreSpan.textContent = finalScore;
-            const circumference = 439.8; // 2 * π * r (r = 70)
-            scoreCircle.style.strokeDashoffset = circumference - (finalScore / 100) * circumference;
-            feedbackDiv.innerHTML = feedback.map(item => `<p class="text-sm text-gray-600">${item}</p>`).join('');
+            atsScoreSpan.textContent = score;
+            const circumference = 527.8;
+            scoreCircle.style.strokeDashoffset = circumference - (score / 100) * circumference;
+            feedbackDiv.innerHTML = feedback.split('\n').map(item => `<p class="text-sm">${item.trim()}</p>`).join('');
             resultsDiv.classList.remove('hidden');
             resultsDiv.scrollIntoView({ behavior: 'smooth' });
 
-            localStorage.setItem('atsScore', JSON.stringify({ score: finalScore, feedback }));
+            localStorage.setItem('atsScore', JSON.stringify({ score, feedback }));
         });
 
         payNowBtn.addEventListener('click', () => {
-            window.location.href = 'https://short.payhero.co.ke/s/8a4CrCW8yaSWo62r48uHWx'; // Replace with your ATS Checker PayHero link for Ksh 17
+            window.location.href = 'https://short.payhero.co.ke/s/8a4CrCW8yaSWo62r48uHWx';
+        });
+
+        mobileMenuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
         });
     </script>
 </body>
